<resources>
    <!-- Main strings -->
    <string name="app_name">Life Plan</string>

    <!-- Navigation sections -->
    <string name="life">Life</string>
    <string name="notes">Notes</string>
    <string name="status">Status</string>

    <!-- Menu items texts -->
    <string name="life_edit_mi">Write text</string>
    <string name="life_delete_mi">Delete text</string>

    <string name="notebook_add_mi">Add Notebook</string>
    <string name="notebook_edit_mi">Edit Notebook</string>
    <string name="notebook_delete_mi">Delete Notebook</string>

    <string name="note_add_mi">Add Note</string>
    <string name="note_edit_mi">Edit Note</string>
    <string name="note_delete_mi">Delete Note</string>

    <string name="day_add_mi">Add Status</string>
    <string name="day_edit_mi">Edit Status</string>
    <string name="day_delete_mi">Delete Status</string>

    <string name="save_mi">Save</string>

    <!-- Toolbar messages -->
    <string name="life_save_message">Describe your desired life</string>

    <string name="notebook_add_message">Add Notebook</string>

    <string name="note_add_message">Add Note</string>

    <string name="day_add_message">Describe your current status</string>

    <!-- Snackbar messages -->
    <string name="life_saved">Text saved</string>
    <string name="life_deleted">Text deleted</string>

    <string name="notebook_added">Notebook added</string>
    <string name="notebook_edited">Notebook edited</string>
    <string name="notebook_deleted">Notebook deleted</string>

    <string name="note_added">Note added</string>
    <string name="note_edited">Note edited</string>
    <string name="note_deleted">Note deleted</string>

    <string name="day_added">Status added</string>
    <string name="day_edited">Status edited</string>
    <string name="day_deleted">Status deleted</string>

    <string name="invalid_notebook">Data is not valid</string>
    <string name="invalid_note">Data is not valid</string>
    <string name="invalid_day">Data is not valid</string>

    <string name="wait_until_all_life_data_is_loaded">Wait until all text is loaded</string>

    <!-- EditText hint messages -->
    <string name="life_description_hint">What\'s your desired life?\n\nEx: I want to spend most of my time learning and living a lot of experiences. I want to study computer science and start a company…</string>
    <string name="notebook_title_hint">Title (Ex: Goals, Habits…)</string>
    <string name="note_title_hint">Title (Ex: Read 1h a day…)</string>
    <string name="note_description_hint">Description\n\nEx: I have to read 1h a day every morning after waking up…</string>
    <string name="day_description_hint">What\'s your current status?\n\nEx: I am quite satisfied with myself because I have been reading a lot. However, there are things that I need to improve…</string>

    <!-- Dialog messages delete item -->
    <string name="dialog_message_delete_life">Are you sure you want to delete it?</string>
    <string name="dialog_message_delete_notebook">Are you sure you want to delete it?</string>
    <string name="dialog_message_delete_note">Are you sure you want to delete it?</string>
    <string name="dialog_message_delete_day">Are you sure you want to delete it?</string>

    <!-- Satisfaction levels -->
    <string name="high_satisfaction">High satisfaction</string>
    <string name="medium_satisfaction">Medium satisfaction</string>
    <string name="low_satisfaction">Low satisfaction</string>

    <!-- Importance levels -->
    <string name="high_importance">High importance</string>
    <string name="medium_importance">Medium importance</string>
    <string name="low_importance">Low importance</string>

    <!-- Empty messages -->
    <string name="empty_life_message">Write a description of your desired life</string>
    <string name="empty_notebooks_message">Add notes about ideas and things you can do to achieve this life</string>
    <string name="empty_notes_message">Add notes to this notebook</string>
    <string name="empty_days_message">Add a description of your status from time to time</string>

    <!-- Image content description messages -->
    <string name="icon_image">@string/app_name</string>

    <!-- Instruction messages -->
    <string name="main_instructions">Describe what you want. Write how to achieve it. Keep track of your progress.</string>

    <string name="life_instructions_title">Describe your desired life</string>
    <string name="life_instructions_description">Take a moment and write about how you want to life and what you want to achieve. This will be a guide to know what you have to do.</string>

    <string name="notes_instructions_title">Write notes to help you achieve it</string>
    <string name="notes_instructions_description">Create notebooks about topics of your life (goals, habits, mindset…) and write notes about ideas and things you can do to achieve this life.</string>

    <string name="status_instructions_title">Keep track of your progress</string>
    <string name="status_instructions_description">From time to time write about your current status and check if you are doing all you have to do.</string>

    <!-- Shared preferences keys -->
    <string name="preference_key_app_launched_before">app_launched_before</string>

    <!-- General -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="Instructions">Instructions</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>