<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_nav_graph"
    app:startDestination="@id/lifeFragment">

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.martiserramolina.lifeplan.ui.fragments.sections.nav.notes.NavNotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_nav_notes" />
    <fragment
        android:id="@+id/statusFragment"
        android:name="com.martiserramolina.lifeplan.ui.fragments.sections.nav.status.NavStatusFragment"
        android:label="@string/status"
        tools:layout="@layout/fragment_nav_status" />
    <fragment
        android:id="@+id/lifeFragment"
        android:name="com.martiserramolina.lifeplan.ui.fragments.sections.nav.life.NavLifeFragment"
        android:label="@string/life"
        tools:layout="@layout/fragment_nav_life" />
</navigation>