<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.instructions.MainInstructionsFragment">

    <ImageView
        android:id="@+id/fragment_instructions_main_icon_iv"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/icon_image"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_instructions_main_app_name_tv"
        app:layout_constraintEnd_toStartOf="@+id/fragment_instructions_main_app_name_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_instructions_main_app_name_tv"
        app:srcCompat="@drawable/ic_life_plan" />

    <TextView
        android:id="@+id/fragment_instructions_main_app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/app_name"
        android:textAppearance="@style/textAppearanceTitlePrimaryToolbar"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_instructions_main_section_description_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fragment_instructions_main_icon_iv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/fragment_instructions_main_section_description_tv"
        style="@style/styleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineHeight="@dimen/lineHeightInstructionsDescription"
        android:text="@string/main_instructions"
        android:textSize="@dimen/textSizeDescriptionInstructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_instructions_main_app_name_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/fragment_instructions_main_icon_iv"
        app:layout_constraintTop_toBottomOf="@+id/fragment_instructions_main_app_name_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>